--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   background-color: #e2fcf3;
 }
 .credits {
-  padding-left: 220px;
+  text-align: center;
 }
 .container {
   background-color: #fbc2c3;
@@ -94,8 +94,8 @@ h1 {
 .current-weather-emoji {
   display: inline-block;
   position: relative;
-  top: 1px;
-  font-size: 50px;
+  top: -5px;
+  font-size: 68px;
 }
 .current-weather {
   display: inline-block;
