--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
   text-align: center;
 }
 .container {
-  background-color: #fbc2c3;
+  /*previous background-color: #fbc2c3; */
+  background-color: #fe6290;
   padding-left: 100px;
   padding-bottom: 100px;
   padding-right: 100px;
@@ -71,8 +72,8 @@ body {
   cursor: pointer;
 }
 h1 {
-  /*Current-weather capsule (original color #010103*/
-  color: #222227;
+  /*color: #222227; */
+  color: #ffffff;
   display: inline;
   padding-left: 30px;
   padding-bottom: 0px;
@@ -85,7 +86,8 @@ h1 {
 .current-temp-holder {
   display: inline;
   position: relative;
-  color: #222227;
+  /* past color: #222227;*/
+  color: #ffffff;
   font-weight: 600;
   font-size: 20px;
   left: -5px;
@@ -97,7 +99,8 @@ h1 {
 }
 
 .units a {
-  color: #e97d83;
+  /*color: #e97d83;*/
+  color: #ffffff74;
   text-decoration: none;
 }
 
@@ -110,7 +113,8 @@ h1 {
   position: relative;
   padding-top: 18px;
   padding-left: 45px;
-  color: #222227;
+  /* past color: #222227;*/
+  color: #ffffff;
   top: 20px;
   font-family: PT Mono, helvetica, arial, sans-serif;
 }
@@ -128,7 +132,8 @@ h1 {
   display: inline-block;
   position: relative;
   padding-left: 390px;
-  color: #222227;
+  /* past color: #222227;*/
+  color: #ffffff;
   font-family: PT Mono, helvetica, arial, sans-serif;
   font-weight: 500;
   font-size: 15px;
@@ -148,7 +153,8 @@ h1 {
   text-align: center;
   left: 110px;
   font-family: PT Mono, helvetica, arial, sans-serif;
-  color: #222227;
+  /* past color: #222227;*/
+  color: #ffffff;
   top: -35px;
   font-size: 15px;
 }
@@ -183,7 +189,8 @@ h1 {
 }
 
 .current-temp-holder .active {
-  color: #222227;
+  /* past color: #222227;*/
+  color: #ffffff;
   cursor: default;
   text-decoration: none;
 }
