--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #e2fcf3;
-}
 .credits {
   text-align: center;
 }
@@ -27,7 +24,7 @@ body {
   padding: 50px;
   /* From https://css.glass */
   background: rgba(254, 239, 239, 0.3);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 212, 213, 0.3);
@@ -38,7 +35,7 @@ body {
   color: #222227;
   right: 150px;
   font-size: 13px;
-  top: 90px;
+  /*top: 90px;*/
 }
 #search-area {
   border-radius: 50px;
@@ -46,27 +43,24 @@ body {
   border-color: #ec9ca0;
   border-style: solid;
   border-width: 1px;
-  box-shadow: 2px 5px 10px #ec9ca067;
+  box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
 }
 #search-area-button {
-  background-color: #ffffff;
-  color: black;
+  background-color: #fe6290;
+  color: white;
   border-radius: 10px;
   font-family: PT Mono, helvetica, arial, sans-serif;
-
   transition: all 200ms ease;
-  box-shadow: none;
   border-style: none;
   padding-top: 3px;
   padding-bottom: 3px;
-  box-shadow: 2px 5px 10px #ec9ca0;
-  /*margin-left: 280px;
-  margin-top: -65px;*/
+  box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
 }
 
 #search-area-button:hover {
-  background: #ec9ca0;
-  border-color: #ec9ca0;
+  color: black;
+  background: white;
+  border-color: white;
   cursor: pointer;
 }
 h1 {
@@ -81,6 +75,18 @@ h1 {
   font-family: PT Mono, helvetica, arial, sans-serif;
   font-weight: 600;
 }
+
+.todays-date {
+  color: #ffffff;
+  display: inline;
+  padding-left: 30px;
+  padding-bottom: 0px;
+  margin-top: 1px;
+  margin-bottom: 0px;
+  position: relative;
+  font-family: PT Mono, helvetica, arial, sans-serif;
+  font-weight: 400;
+}
 .current-temp-holder {
   display: inline;
   position: relative;
@@ -90,20 +96,6 @@ h1 {
   font-size: 20px;
   left: -5px;
   font-family: PT Mono, helvetica, arial, sans-serif;
-}
-
-.units {
-  font-size: 12px;
-}
-
-.units a {
-  /*color: #e97d83;*/
-  color: #ffffff74;
-  text-decoration: none;
-}
-
-.units a:hover {
-  color: #e94c54;
 }
 
 .current-weather-holder {
@@ -129,13 +121,13 @@ h1 {
 .current-weather-conditions {
   display: inline-block;
   position: relative;
-  padding-left: 390px;
+  padding-left: 120px;
   /* past color: #222227;*/
   color: #ffffff;
   font-family: PT Mono, helvetica, arial, sans-serif;
   font-weight: 500;
   font-size: 15px;
-  top: -79px;
+  top: -69px;
 }
 
 .current-weather-conditions ul {
@@ -151,7 +143,6 @@ h1 {
   text-align: center;
   left: 110px;
   font-family: PT Mono, helvetica, arial, sans-serif;
-  /* past color: #222227;*/
   color: #ffffff;
   top: -35px;
   font-size: 15px;
@@ -174,15 +165,15 @@ h1 {
   color: black;
   text-align: center;
   position: absolute;
-  bottom: 154px;
+  bottom: 148px;
   right: 340px;
   padding: 1px;
-  box-shadow: 2px 5px 10px #ec9ca0;
+  box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
   border-style: none;
 }
 #current-loc-button:hover {
-  background: #ec9ca0;
-  border-color: #ec9ca0;
+  background: #fe6290;
+  border-color: #fe6290;
   cursor: pointer;
 }
 
@@ -199,4 +190,11 @@ h1 {
 
 .future-lows {
   opacity: 0.5;
+}
+
+.col-2 {
+  background-color: rgba(255, 255, 255, 0.138);
+  border-radius: 56% 44% 57% 43% / 37% 47% 53% 63%;
+  padding: 18px;
+  box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
 }
