--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@
   text-align: center;
 }
 .container {
-  /*previous background-color: #fbc2c3; */
-  /*background-color: #fe6290;*/
   padding-left: 100px;
   padding-bottom: 100px;
   padding-right: 100px;
@@ -22,7 +20,6 @@
   position: relative;
   top: 20px;
   padding: 50px;
-  /* From https://css.glass */
   background: rgb(181, 107, 240);
   box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
   backdrop-filter: blur(5px);
@@ -40,13 +37,15 @@
 #search-area {
   border-radius: 50px;
   font-family: PT Mono, helvetica, arial, sans-serif;
-  border-color: #ec9ca0;
+  /*border-color: #ec9ca0;*/
+  border-color: #9d4edd;
   border-style: solid;
   border-width: 1px;
   box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
 }
 #search-area-button {
-  background-color: #fe6290;
+  /*background-color: #fe6290;*/
+  background-color: #ff7900;
   color: white;
   border-radius: 10px;
   font-family: PT Mono, helvetica, arial, sans-serif;
@@ -101,8 +100,8 @@ h1 {
 .current-weather-holder {
   display: block;
   position: relative;
-  padding-top: 18px;
-  padding-left: 45px;
+  padding-top: 30px;
+  margin-left: auto;
   /* past color: #222227;*/
   color: #ffffff;
   top: 20px;
@@ -111,8 +110,9 @@ h1 {
 .current-weather-emoji {
   display: inline-block;
   position: relative;
-  top: -3px;
+  top: -28px;
   font-size: 68px;
+  left: 17px;
 }
 .current-weather {
   display: inline-block;
@@ -121,13 +121,14 @@ h1 {
 .current-weather-conditions {
   display: inline-block;
   position: relative;
-  padding-left: 120px;
+  margin-left: auto;
   /* past color: #222227;*/
   color: #ffffff;
   font-family: PT Mono, helvetica, arial, sans-serif;
   font-weight: 500;
   font-size: 15px;
-  top: -69px;
+  top: -88px;
+  left: 20px;
 }
 
 .current-weather-conditions ul {
@@ -147,15 +148,15 @@ h1 {
   color: black;
   text-align: center;
   position: absolute;
-  bottom: 148px;
+  bottom: 157px;
   right: 340px;
   padding: 1px;
   box-shadow: 9px 1px 17px -6px rgba(0, 0, 0, 0.27);
   border-style: none;
 }
 #current-loc-button:hover {
-  background: #fe6290;
-  border-color: #fe6290;
+  background: #ff7900;
+  border-color: #ff7900;
   cursor: pointer;
 }
 
@@ -173,8 +174,20 @@ h1 {
   opacity: 0.5;
 }
 
+.days-ahead {
+  color: #ffffff;
+  font-family: PT Mono, helvetica, arial, sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  text-align: center;
+  position: relative;
+  bottom: 35px;
+  left: 400px;
+}
+
 .col-2 {
-  background-color: rgba(255, 255, 255, 0.161);
+  /*background-color: rgba(255, 255, 255, 0.355);*/
+  background: #ffffff35;
   /*background: #eabdfe9b;*/
   border-radius: 56% 44% 57% 43% / 37% 47% 53% 63%;
   padding: 18px;
